--- a/Template.html
+++ b/Template.html
@@ -5,24 +5,24 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Factorial</title>
+    <title>pigLatin</title>
   </head>
   <body>
     <div class="container">
-      <h1>Desscribing Title</h1>
+      <h1>Igpay atinlay</h1>
 
-      <form id="good name">
+      <form id="latin">
         <div class="form-group">
-          <label for="good label">Form Stuff</label>
-          <input id="good id" type="text" required=""><br>
+          <label for="latin">Itewray omethingsay:</label>
+          <input id="word" type="text" required=""><br>
 
         </div>
 
-        <button type="submit" class="btn">Find out!</button>
+        <button type="submit" class="btn">Atwhay idday ouyay aysay?!</button>
       </form>
 
       <div id="result">
-        <p> <span class="number"></span>.</p>
+        <p> Esultray: <span class="pig"></span>.</p>
       </div>
     </div>
   </body>
