Add Gir and Pig

--- a/Template.html
+++ b/Template.html
@@ -19,11 +19,12 @@
         </div>
 
         <button type="submit" class="btn">Atwhay idday ouyay aysay?!</button>
-      </form>
+      </form><br>
 
       <div id="result">
-        <p> Esultray: <span class="pig"></span>.</p>
+        <p class="result"> Esultray: <span class="pig"></span>.</p>
       </div>
+      <div class ="gir"> <img src="img/pig.jpg" >
     </div>
   </body>
 </html>
