Gir and bubble in same div as result id

--- a/Template.html
+++ b/Template.html
@@ -22,9 +22,10 @@
       </form><br>
 
       <div id="result">
-        <p class="result"> Esultray: <span class="pig"></span>.</p>
+        <p class="result"> Esultray: <span class="pig"></span>.</p><img src="img/bubble.png" >
+      <div class ="bubble"></div>
+      <div class ="gir"> <img src="img/pig.jpg" ></div>
       </div>
-      <div class ="gir"> <img src="img/pig.jpg" >
     </div>
   </body>
 </html>
