--- a/Template.html
+++ b/Template.html
@@ -4,6 +4,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.3.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
     <script src="js/scripts.js"></script>
     <title>pigLatin</title>
   </head>
@@ -22,9 +23,11 @@
       </form><br>
 
       <div id="result">
-        <p class="result"> Esultray: <span class="pig"></span>.</p><img src="img/bubble.png" >
-      <div class ="bubble"></div>
-      <div class ="gir"> <img src="img/pig.jpg" ></div>
+        <div class="gir">  <img src="img/pig.jpg"></div>
+      <div class ="bubble">
+        <img src="img/bubble.png">
+        <h5 class="result"> Esultray:<br> <span class="pig"></span></h5>
+       </div>
       </div>
     </div>
   </body>
